--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-action-button": "^2.8.5",
+    "react-native-config": "^0.11.7",
     "react-native-date-picker": "^2.2.1",
     "react-native-elements": "^0.19.1",
     "react-native-gesture-handler": "^1.0.12",
