--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,6 +146,9 @@ android {
 }
 
 dependencies {
+    compile project(':appcenter-crashes')
+    compile project(':appcenter-analytics')
+    compile project(':appcenter')
     compile project(':react-native-config')
     compile project(':react-native-vector-icons')
     compile project(':react-native-date-picker')
