--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "appcenter": "1.11.0",
+    "appcenter-analytics": "1.11.0",
+    "appcenter-crashes": "1.11.0",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
     "react": "16.6.3",
