--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,6 +146,7 @@ android {
 }
 
 dependencies {
+    compile project(':appcenter-push')
     compile project(':appcenter-crashes')
     compile project(':appcenter-analytics')
     compile project(':appcenter')
@@ -165,3 +166,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
