--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "appcenter": "1.11.0",
     "appcenter-analytics": "1.11.0",
     "appcenter-crashes": "1.11.0",
+    "appcenter-push": "^1.11.0",
     "moment": "^2.23.0",
     "moment-timezone": "^0.5.23",
     "react": "16.6.3",
