--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,6 +2,7 @@
 # platform :ios, '9.0'
 
 target 'wallas' do
+  pod 'AppCenter/Push', '~> 1.12.0'
   pod 'AppCenter/Crashes', '~> 1.12.0'
   pod 'AppCenter/Analytics', '~> 1.12.0'
   pod 'AppCenterReactNativeShared', '~> 1.11.0'
