--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-elements": "^0.19.1",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-modal": "^7.0.2",
+    "react-native-paper": "^2.4.0",
+    "react-native-swipe-list-view": "^1.5.0",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.9"
   },
