--- a/package.json
+++ b/package.json
@@ -6,7 +6,22 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
+    "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "tsc": "tsc"
+  },
+  "jest": {
+    "preset": "react-native"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && tsc"
+    }
+  },
+  "lint-staged": {
+    "*.{ts, tsx, json}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "appcenter": "1.11.0",
@@ -35,14 +50,16 @@
     "@types/react-navigation": "^3.0.1",
     "@types/react-test-renderer": "^16.0.3",
     "babel-jest": "23.6.0",
+    "husky": "^1.3.1",
     "jest": "23.6.0",
+    "lint-staged": "^8.1.0",
     "metro-react-native-babel-preset": "0.51.1",
+    "prettier": "^1.15.3",
     "react-test-renderer": "16.6.3",
     "tslint": "^5.12.0",
+    "tslint-config-prettier": "^1.17.0",
+    "tslint-plugin-prettier": "^2.0.1",
     "tslint-react": "^3.6.0",
     "typescript": "^3.2.2"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
