--- a/package.json
+++ b/package.json
@@ -1,65 +1,67 @@
 {
-  "name": "wallas",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
-    "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
-    "tslint-check": "tslint-config-prettier-check ./tslint.json",
-    "tsc": "tsc"
-  },
-  "jest": {
-    "preset": "react-native"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && tsc"
+    "name": "wallas",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "node node_modules/react-native/local-cli/cli.js start",
+        "test": "jest",
+        "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
+        "tslint-check": "tslint-config-prettier-check ./tslint.json",
+        "tsc": "tsc",
+        "pretty": "prettier --write"
+    },
+    "jest": {
+        "preset": "react-native"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{ts, tsx, json}": [
+            "prettier --write",
+            "git add"
+        ]
+    },
+    "dependencies": {
+        "appcenter": "1.11.0",
+        "appcenter-analytics": "1.11.0",
+        "appcenter-crashes": "1.11.0",
+        "appcenter-push": "^1.11.0",
+        "moment": "^2.23.0",
+        "moment-timezone": "^0.5.23",
+        "react": "16.6.3",
+        "react-native": "0.57.8",
+        "react-native-action-button": "^2.8.5",
+        "react-native-config": "^0.11.7",
+        "react-native-date-picker": "^2.2.1",
+        "react-native-elements": "^0.19.1",
+        "react-native-gesture-handler": "^1.0.12",
+        "react-native-modal": "^7.0.2",
+        "react-native-paper": "^2.4.0",
+        "react-native-swipe-list-view": "^1.5.0",
+        "react-native-vector-icons": "^6.1.0",
+        "react-navigation": "^3.0.9"
+    },
+    "devDependencies": {
+        "@types/jest": "^23.3.10",
+        "@types/moment-timezone": "^0.5.9",
+        "@types/react": "^16.7.18",
+        "@types/react-native": "^0.57.22",
+        "@types/react-navigation": "^3.0.1",
+        "@types/react-test-renderer": "^16.0.3",
+        "babel-jest": "23.6.0",
+        "husky": "^1.3.1",
+        "jest": "23.6.0",
+        "lint-staged": "^8.1.0",
+        "metro-react-native-babel-preset": "0.51.1",
+        "prettier": "^1.15.3",
+        "react-test-renderer": "16.6.3",
+        "tslint": "^5.12.0",
+        "tslint-config-prettier": "^1.17.0",
+        "tslint-plugin-prettier": "^2.0.1",
+        "tslint-react": "^3.6.0",
+        "typescript": "^3.2.2"
     }
-  },
-  "lint-staged": {
-    "*.{ts, tsx, json}": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "dependencies": {
-    "appcenter": "1.11.0",
-    "appcenter-analytics": "1.11.0",
-    "appcenter-crashes": "1.11.0",
-    "appcenter-push": "^1.11.0",
-    "moment": "^2.23.0",
-    "moment-timezone": "^0.5.23",
-    "react": "16.6.3",
-    "react-native": "0.57.8",
-    "react-native-action-button": "^2.8.5",
-    "react-native-config": "^0.11.7",
-    "react-native-date-picker": "^2.2.1",
-    "react-native-elements": "^0.19.1",
-    "react-native-gesture-handler": "^1.0.12",
-    "react-native-modal": "^7.0.2",
-    "react-native-paper": "^2.4.0",
-    "react-native-swipe-list-view": "^1.5.0",
-    "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^3.0.9"
-  },
-  "devDependencies": {
-    "@types/jest": "^23.3.10",
-    "@types/react": "^16.7.18",
-    "@types/react-native": "^0.57.22",
-    "@types/react-navigation": "^3.0.1",
-    "@types/react-test-renderer": "^16.0.3",
-    "babel-jest": "23.6.0",
-    "husky": "^1.3.1",
-    "jest": "23.6.0",
-    "lint-staged": "^8.1.0",
-    "metro-react-native-babel-preset": "0.51.1",
-    "prettier": "^1.15.3",
-    "react-test-renderer": "16.6.3",
-    "tslint": "^5.12.0",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^3.6.0",
-    "typescript": "^3.2.2"
-  }
 }
