--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,14 @@
 
         /* Module Resolution Options */
         "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
+        "baseUrl": "./" /* Base directory to resolve non-absolute module names. */,
         "allowSyntheticDefaultImports": true /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */,
-        "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via
+        "esModuleInterop": true, /* Enables emit interoperability between CommonJS and ES Modules via
     creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+        "paths": {
+            "*": ["typings/*"]
+        }
     },
     "include": ["src/**/*"],
-    "exclude": ["index.js", "android", "ios", "build", "node_modules"]
+    "exclude": ["index.js", "android", "ios", "build", "node_modules", "typings"]
 }
