--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@types/moment-timezone": "^0.5.9",
         "@types/react": "^16.7.18",
         "@types/react-native": "^0.57.22",
+        "@types/react-native-vector-icons": "^4.6.4",
         "@types/react-navigation": "^3.0.1",
         "@types/react-test-renderer": "^16.0.3",
         "babel-jest": "23.6.0",
